--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
+    "google-auth-library": "^9.0.0",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7"
   }
