--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "vercel dev",
+    "build": "vercel build",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "google-auth-library": "^9.0.0",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "@vercel/node": "^3.0.0"
   }
 }
