fix: Update vercel.json to serve static files correctly

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,21 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "@vercel/node@3.0.0"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/index.html"
     }
-  ],
-  "env": {
-    "GEMINI_API_URL": "@gemini-api-url",
-    "GEMINI_ACCESS_TOKEN": "@gemini-access-token",
-    "FORCE_DEMO": "false"
-  }
+  ]
 }
