fix: Move static files to public folder for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/img/(.*)", "destination": "/img/$1" }
-  ]
+    { "source": "/api/(.*)", "destination": "/api/$1" }
+  ],
+  "public": true
 }
