feat: Switch to Google AI Studio API

--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -58,8 +58,6 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
         run: |
-          # Production 배포 (Workload Identity Bearer 토큰 방식)
+          # Production 배포 (Google AI Studio API 키 방식)
           vercel --prod --token=$VERCEL_TOKEN --yes \
-            -e GEMINI_ACCESS_TOKEN="$GEMINI_ACCESS_TOKEN" \
-            -e GCP_PROJECT_ID="${{ secrets.GCP_PROJECT_ID }}" \
-            -e GCP_REGION="us-central1"
+            -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}"
